recursion.lessons.recursion.spiral.SpiralUse.scala.error
SpiralUse:3: error: type mismatch;
 found   : Double(3.14)
 required: Int
    spiral(100,91,1,3.14);
                    ^